# apps/app/api/index.ts
@@ -29,6 +29,7 @@ export {
     getFinancialAccounts,
     getImportById,
     getImports,
+    getImportTransactionsById,
     getRootStatus,
     getStatus,
     getSubcategories,
@@ -250,6 +251,12 @@ export type {
     GetImportsErrors,
     GetImportsResponse,
     GetImportsResponses,
+    GetImportTransactionsByIdData,
+    GetImportTransactionsByIdError,
+    GetImportTransactionsByIdErrors,
+    GetImportTransactionsByIdResponse,
+    GetImportTransactionsByIdResponses,
+    GetImportTransactionsResponse,
     GetNetWorthEvolutionReportResponse,
     GetRootStatusData,
     GetRootStatusError,
@@ -309,6 +316,7 @@ export type {
     ImportFile,
     ImportFilters,
     ImportParamsId,
+    ImportTransactionDataResponse,
     LanguageEnum,
     NetWorthEvolution,
     NetWorthEvolutionFilters,
